<resources>
    <string name="app_name">Bricks Breaker</string>
    <string name="btn_new_game">New Game</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_exit">Exit</string>
    <string name="settings">Settings</string>
    <string-array name="num_speed">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="firmness">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="max_strength">Maximum Strength Of The Blocks</string>
    <string name="start_speed">Ball\'s Starting Speed</string>
    <string name="time_mode">Time Mode</string>
    <string name="tilt_control">Sensitivity to tilt</string>
    <string name="score">Score :</string>
    <string name="best_score">Best Score : 0</string>
    <string name="btn_save_and_exit">Save &amp; Exit</string>
</resources>

