<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/my_backgr"
    tools:context="com.example.pc_key.sipsesforever.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/spinner2"
        android:layout_toStartOf="@+id/spinner2"
        android:layout_marginRight="40dp"
        android:text="@string/start_speed"
        android:textAlignment="center"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/btn_settings"
        android:textAllCaps="true"

        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="32sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignEnd="@id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/textView1"

        android:background="?android:attr/colorActivatedHighlight" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_above="@+id/textView1"
        android:layout_alignEnd="@id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignStart="@+id/textView1"

        android:background="?android:attr/colorActivatedHighlight" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/spinner2"
        android:layout_marginTop="25dp"

        android:background="?android:attr/colorActivatedHighlight" />

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/spinner2"
        android:layout_marginBottom="14dp"

        android:background="?android:attr/colorActivatedHighlight" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="14dp"
        android:background="#e7ffffff"
        android:textAlignment="center"
        android:entries="@array/num_speed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView1"
        android:layout_toEndOf="@+id/textView1" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/line3"
        android:layout_alignLeft="@+id/spinner2"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/spinner2"
        android:layout_marginTop="70dp"
        android:background="#e7ffffff"
        android:entries="@array/firmness"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="120dp"
        android:background="#50485bb9"
        android:onClick="onMyButtonClick3"
        android:text="@string/btn_save_and_exit"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/spinner1"
        android:layout_toLeftOf="@+id/spinner1"
        android:layout_toStartOf="@+id/spinner1"
        android:layout_marginRight="45dp"
        android:text="@string/max_strength"
        android:textAlignment="center"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_mode"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="21sp"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/switch1"
        android:layout_toStartOf="@+id/switch1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editText"
        android:layout_below="@+id/line4"
        android:layout_toLeftOf="@+id/spinner2"
        android:background="#50485bb9"
        android:textOff="OFF"
        android:textOn="ON"
        app:showText="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/line4"
        android:layout_toEndOf="@+id/switch1"
        android:layout_toRightOf="@+id/switch1"
        android:background="#e7ffffff"
        android:ems="10"
        android:inputType="time"
        android:textAlignment="center" />

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/editText"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:background="?android:attr/colorActivatedHighlight" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:background="#50485bb9"
        android:textOff="OFF"
        android:textOn="ON"
        app:showText="true"
        android:layout_below="@+id/line5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tilt_control"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="21sp"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/switch2"
        android:layout_alignBottom="@+id/switch2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>